# bevy-game

./: Cargo.toml
.github/: copilot-instructions.md
assets/: enemies.sample.ron
assets/entities/enemies/: devil.ron
assets/maps/: map1.tmx
src/: main.rs
src/game/: assets.rs  config.rs  game.rs  game_state.rs  mod.rs  resources.rs  spatial.rs  state.rs
src/game/animation/: animation.rs
src/game/camera/: camera.rs
src/game/collisions/: collisions.rs
src/game/common/components/characters/: health.rs  mod.rs  move_speed.rs  state.rs
src/game/enemies/: component.rs  enemies.rs  enemies_example.rs  mod.rs
src/game/helpers/: tiled.rs
src/game/map/: map.rs  mod.rs  terrain.rs
src/game/player/: animation.rs  atlas_index.rs  component.rs  controls.rs  events.rs  mod.rs  player.rs  weapon.rs
src/game/ui/: fps.rs
