[package]
name = "bevy-game"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d", "ui", "bevy_dev_tools", "wayland"] }
bevy-inspector-egui = "0.36.0"
bevy_ecs_tilemap = "0.18.1"
thiserror = "2.0.18"
tiled = "0.15.0"
noise = "0.9.0"
rand = "0.9.2"
bevy_common_assets = { version = "0.15.0", features = ["ron"] }
serde = "1.0.228"
kd-tree = "0.6.0"
typenum = "1.18.0"

